[gd_scene load_steps=3 format=3 uid="uid://b2kupenuwne5a"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_5o1ba"]
[ext_resource type="AudioStream" uid="uid://bja6thudab6hb" path="res://assets/audio/sfx/icy_uiclick.wav" id="2_6njq3"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5o1ba")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="resume" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Resume"

[node name="exit" type="Button" parent="CenterContainer/VBoxContainer"]
process_mode = 3
process_priority = 2
layout_mode = 2
text = "Exit (all progress will be lost)
"

[node name="sfx_uiclick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_6njq3")
bus = &"SFX"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
